--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,6 @@ version: 2.33
 name: FiFuNekoMark
 author: NekokeCore
 commands:
-  kejin:
+  neko-mark:
     description: "小白印记"
     usage: /neko-mark <操作符> <参数>
