--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ repositories {
     google()
 }
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    // testCompile group: 'junit', name: 'junit', version: '4.12'
 //    implementation 'org.bukkit:bukkit:1.19.1-R0.1-SNAPSHOT'
     implementation "org.spigotmc:spigot-api:1.19.2-R0.1-SNAPSHOT"
 }
